# amigo-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/commands/: add-resource.md  build.md  generate-models.md  lint.md  release-check.md  test.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  codeql.yml  docs.yml  release.yml  test.yml
benchmarks/: RESULTS.md  concurrent_requests.py  run.sh  token_refresh.py
docs/: index.md
docs/reference/: client.md  config.md  errors.md  models.md  resources.md
examples/: .env.example  README.md  error_handling.py  requirements.txt
examples/conversation/: async_client.py  conversation.py  conversation_async.py  conversation_events.py  conversation_sync.py  streaming_events.py
examples/user/: user-management.py
scripts/: check.py  gen_models.py  generate_changelog.py  sync_openapi.py
specs/: openapi-baseline.json
src/: auth.py  client.py  config.py  errors.py  http_client.py  sdk_client.py
src/amigo_sdk/: __init__.py  _retry_utils.py  auth.py  errors.py  http_client.py  models.py  rate_limits.py  sdk_client.py  webhooks.py
src/amigo_sdk/resources/: __init__.py  agent.py  context_graph.py  conversation.py  organization.py  role.py  service.py  user.py
src/resources/: conversation.py  organization.py  service.py
tests/: conftest.py  test_auth.py  test_config.py  test_contract.py  test_errors.py  test_http_client.py  test_http_client_sync.py  test_integration.py  test_mypy_strict.py  test_public_surface.py  test_retry_utils.py  test_sdk_client.py  test_sdk_client_sync.py  test_streaming_load.py
tests/integration/: test_conversation_integration.py  test_organization_integration.py  test_user_integration.py
tests/integration/fixtures/: hello.wav.m4a
tests/resources/: helpers.py  test_agent.py  test_context_graph.py  test_conversation.py  test_conversation_sync_co_located.py  test_organization.py  test_role.py  test_service.py  test_user.py
