[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="amigo-python-sdk"
description = "Amigo AI Python SDK"
readme = "README.md"
requires-python = ">= 3.9"
authors=[{name="Amigo AI"}]
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

dependencies = [
  "httpx>=0.25",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
]

[project.scripts]
gen-models = "scripts.gen_models:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "python-dotenv", "ruff", "datamodel-code-generator[http]"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/"]