[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="amigo_sdk"
description = "Official Python SDK for the Classic Amigo API at api.amigo.ai"
readme = "README.md"
requires-python = ">= 3.11"
authors=[{name="Amigo Inc."}]
license = "MIT"
keywords = ["amigo", "sdk", "python", "api", "conversation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

dependencies = [
  "httpx>=0.28.1,<1.0",
  "pydantic>=2.13.3,<3.0",
  "pydantic-settings>=2.14.0,<3.0",
  "email-validator>=2.3.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/amigo-ai/amigo-python-sdk"
Documentation = "https://docs.amigo.ai"
APIReference = "https://amigo-ai.github.io/amigo-python-sdk/"
Repository = "https://github.com/amigo-ai/amigo-python-sdk"
Issues = "https://github.com/amigo-ai/amigo-python-sdk/issues"
Changelog = "https://github.com/amigo-ai/amigo-python-sdk/blob/main/CHANGELOG.md"

[project.scripts]
gen-models = "scripts.gen_models:main"
check = "scripts.check:main"
sync-openapi = "scripts.sync_openapi:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-asyncio>=1.3.0,<2.0",
  "pytest-cov>=7.1.0,<8.0",
  "pytest-httpx>=0.36.2,<1.0",
  "python-dotenv>=1.2.2,<2.0",
  "ruff>=0.15.12,<1.0",
  "mypy>=1.20.2",
  "datamodel-code-generator[http]>=0.56.1,<1.0",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocstrings[python]>=1.0.4",
]

[tool.hatch.version]
path = "src/amigo_sdk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
  "src/amigo_sdk",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "examples",
  "htmlcov",
]

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"
user = "__token__"
auth = "env:PYPI_API_TOKEN"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
    "-m", "not integration"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselected by default)",
    "unit: marks tests as unit tests (selected by default)",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/scripts/*",
    "*/generated/*",
    "src/amigo_sdk/generated/*"
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    "src/amigo_sdk/generated",
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dist",
    "htmlcov"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
exclude = [
    "src/amigo_sdk/generated"
]
